--- a/Chapter7.css
+++ b/Chapter7.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.main visual {
+.main-visual {
   width: 100%;
   height: 400px;
   background-image: url(img/mv.jpg);
@@ -23,23 +23,23 @@ main {
 
 .service1 {
   margin-bottom: 30px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #d1d1d1;
   padding-bottom: 30px;
 }
 
 .service2 {
   margin-bottom: 30px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #d1d1d1;
   padding-bottom: 30px;
 }
 
 .service3 {
   margin-bottom: 30px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #d1d1d1;
   padding-bottom: 30px;
 }
 
 .service4 {
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid #d1d1d1;
   padding-bottom: 30px;
 }
